--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -13,6 +13,9 @@ hr.line-separator{
     margin-bottom: 36px;
 }
 
+a.highlight{
+    color: #f26624;
+}
 .title{
     h1{
         padding: 20px;
